// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator > add another postcss plugin 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin.withOptions(function (_options) {
  return function ({
    addBase: addBase,
    addComponents: addComponents,
    addUtilities: addUtilities,
    theme: theme,
    addVariant: addVariant,
    config: config,
    corePlugins: corePlugins,
    e: e,
    matchComponents: matchComponents,
    matchUtilities: matchUtilities,
    matchVariant: matchVariant
  }) {
    addBase({
      \\"h1\\": {
        \\"font-size\\": theme(\\"fontSize.2xl\\")
      },
      \\"h2\\": {
        \\"font-size\\": theme(\\"fontSize.xl\\")
      }
    });
    addComponents({
      \\".card\\": {
        \\"background-color\\": theme(\\"colors.white\\"),
        \\"border-radius\\": theme(\\"borderRadius.lg\\"),
        \\"padding\\": theme(\\"spacing.6\\"),
        \\"box-shadow\\": theme(\\"boxShadow.xl\\")
      },
      \\".test\\": {
        \\"font-size\\": \\"99.6px\\"
      }
    });
    addUtilities({
      \\".content-auto\\": {
        \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
      }
    });
  };
}, function (_options) {
  return {};
});
module.exports = css2TwPlugin;"
`;

exports[`generator > apply case 0 > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.a {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity));
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity));
    font-size: 1.25rem
}
"
`;

exports[`generator > apply case 0 > generate 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({});
  addUtilities({
    \\".a\\": {
      \\"--tw-bg-opacity\\": \\"1\\",
      \\"background-color\\": \\"rgb(18 52 86 / var(--tw-bg-opacity))\\",
      \\"--tw-text-opacity\\": \\"1\\",
      \\"color\\": \\"rgb(18 52 86 / var(--tw-text-opacity))\\",
      \\"font-size\\": \\"1.25rem\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > apply case 1 > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  
}
.a {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity));
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity));
    font-size: 1.25rem
}"
`;

exports[`generator > apply case 1 > generate 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({});
  addUtilities({
    \\".a\\": {
      \\"--tw-bg-opacity\\": \\"1\\",
      \\"background-color\\": \\"rgb(18 52 86 / var(--tw-bg-opacity))\\",
      \\"--tw-text-opacity\\": \\"1\\",
      \\"color\\": \\"rgb(18 52 86 / var(--tw-text-opacity))\\",
      \\"font-size\\": \\"1.25rem\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > apply case 2 > css 1`] = `
"
  .a {
    --tw-bg-opacity: 1;
    background-color: rgb(18 52 86 / var(--tw-bg-opacity));
    --tw-text-opacity: 1;
    color: rgb(18 52 86 / var(--tw-text-opacity));
    font-size: 1.25rem
}"
`;

exports[`generator > apply case 2 > generate 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({});
  addUtilities({
    \\".a\\": {
      \\"--tw-bg-opacity\\": \\"1\\",
      \\"background-color\\": \\"rgb(18 52 86 / var(--tw-bg-opacity))\\",
      \\"--tw-text-opacity\\": \\"1\\",
      \\"color\\": \\"rgb(18 52 86 / var(--tw-text-opacity))\\",
      \\"font-size\\": \\"1.25rem\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({});
  addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 0 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h1\\": {
      \\"font-size\\": theme(\\"fontSize.2xl\\")
    },
    \\"h2\\": {
      \\"font-size\\": theme(\\"fontSize.xl\\")
    }
  });
  addComponents({
    \\".card\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    }
  });
  addUtilities({
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 0 sync 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h1\\": {
      \\"font-size\\": theme(\\"fontSize.2xl\\")
    },
    \\"h2\\": {
      \\"font-size\\": theme(\\"fontSize.xl\\")
    }
  });
  addComponents({
    \\".card\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    }
  });
  addUtilities({
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 0 withOptions 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin.withOptions(function (_options) {
  return function ({
    addBase: addBase,
    addComponents: addComponents,
    addUtilities: addUtilities,
    theme: theme,
    addVariant: addVariant,
    config: config,
    corePlugins: corePlugins,
    e: e,
    matchComponents: matchComponents,
    matchUtilities: matchUtilities,
    matchVariant: matchVariant
  }) {
    addBase({
      \\"h1\\": {
        \\"font-size\\": theme(\\"fontSize.2xl\\")
      },
      \\"h2\\": {
        \\"font-size\\": theme(\\"fontSize.xl\\")
      }
    });
    addComponents({
      \\".card\\": {
        \\"background-color\\": theme(\\"colors.white\\"),
        \\"border-radius\\": theme(\\"borderRadius.lg\\"),
        \\"padding\\": theme(\\"spacing.6\\"),
        \\"box-shadow\\": theme(\\"boxShadow.xl\\")
      }
    });
    addUtilities({
      \\".content-auto\\": {
        \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
      }
    });
  };
}, function (_options) {
  return {};
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 1 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({
    \\".card0\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    },
    \\".card1\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    },
    \\".content-area0\\": {
      \\"height\\": \`calc(100vh - \${theme(\\"spacing.12\\")})\`
    },
    \\".content-area1\\": {
      \\"height\\": \`calc(100vh - \${theme(\\"spacing[2.5]\\")})\`
    },
    \\".btn-blue0\\": {
      \\"background-color\\": theme(\\"colors.blue.500\\")
    },
    \\".btn-blue1\\": {
      \\"background-color\\": theme(\\"colors.blue.500 / 75%\\")
    }
  });
  addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > generate case 2 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h1\\": {
      \\"font-size\\": theme(\\"fontSize.2xl\\")
    },
    \\"h2\\": {
      \\"font-size\\": theme(\\"fontSize.xl\\")
    },
    \\".card1\\": {
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    }
  });
  addComponents({
    \\".card\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    }
  });
  addUtilities({
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h3\\": {
      \\"font-size\\": theme(\\"fontSize.2xl\\")
    },
    \\"h4\\": {
      \\"font-size\\": theme(\\"fontSize.xl\\")
    },
    \\"h1\\": {
      \\"font-size\\": theme(\\"fontSize.2xl\\")
    },
    \\"h2\\": {
      \\"font-size\\": theme(\\"fontSize.xl\\")
    }
  });
  addComponents({
    \\".card-imported\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    },
    \\".card\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    }
  });
  addUtilities({
    \\".content-auto-imported\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    },
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 with tailwindcss config 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h3\\": {
      \\"font-size\\": \\"1.5rem\\"
    },
    \\"h4\\": {
      \\"font-size\\": \\"1.25rem\\"
    },
    \\"h1\\": {
      \\"font-size\\": \\"1.5rem\\"
    },
    \\"h2\\": {
      \\"font-size\\": \\"1.25rem\\"
    }
  });
  addComponents({
    \\".card-imported\\": {
      \\"background-color\\": \\"#fff\\",
      \\"border-radius\\": \\"0.5rem\\",
      \\"padding\\": \\"1.5rem\\",
      \\"box-shadow\\": \\"0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)\\"
    },
    \\".card\\": {
      \\"background-color\\": \\"#fff\\",
      \\"border-radius\\": \\"0.5rem\\",
      \\"padding\\": \\"1.5rem\\",
      \\"box-shadow\\": \\"0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)\\"
    }
  });
  addUtilities({
    \\".content-auto-imported\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    },
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 with tailwindcss config case > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
h3 {
    font-size: 1.5rem;
  }
h4 {
    font-size: 1.25rem;
  }
.card-imported {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto-imported {
    content-visibility: \\"auto\\";
  }
h1 {
    font-size: 1.5rem;
  }
h2 {
    font-size: 1.25rem;
  }
.card {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto {
    content-visibility: \\"auto\\";
  }
"
`;

exports[`generator > import case 0 with tailwindcss config case > generate 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h3\\": {
      \\"font-size\\": \\"1.5rem\\"
    },
    \\"h4\\": {
      \\"font-size\\": \\"1.25rem\\"
    },
    \\"h1\\": {
      \\"font-size\\": \\"1.5rem\\"
    },
    \\"h2\\": {
      \\"font-size\\": \\"1.25rem\\"
    }
  });
  addComponents({
    \\".card-imported\\": {
      \\"background-color\\": \\"#fff\\",
      \\"border-radius\\": \\"0.5rem\\",
      \\"padding\\": \\"1.5rem\\",
      \\"box-shadow\\": \\"0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)\\"
    },
    \\".card\\": {
      \\"background-color\\": \\"#fff\\",
      \\"border-radius\\": \\"0.5rem\\",
      \\"padding\\": \\"1.5rem\\",
      \\"box-shadow\\": \\"0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)\\"
    }
  });
  addUtilities({
    \\".content-auto-imported\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    },
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > import case 0 with tailwindcss config case with content > css 1`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}
h3 {
    font-size: 1.5rem;
  }
h4 {
    font-size: 1.25rem;
  }
.card-imported {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto-imported {
    content-visibility: \\"auto\\";
  }
h1 {
    font-size: 1.5rem;
  }
h2 {
    font-size: 1.25rem;
  }
.card {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }
.content-auto {
    content-visibility: \\"auto\\";
  }
"
`;

exports[`generator > import case 0 with tailwindcss config case with content > generate 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h3\\": {
      \\"font-size\\": \\"1.5rem\\"
    },
    \\"h4\\": {
      \\"font-size\\": \\"1.25rem\\"
    },
    \\"h1\\": {
      \\"font-size\\": \\"1.5rem\\"
    },
    \\"h2\\": {
      \\"font-size\\": \\"1.25rem\\"
    }
  });
  addComponents({
    \\".card-imported\\": {
      \\"background-color\\": \\"#fff\\",
      \\"border-radius\\": \\"0.5rem\\",
      \\"padding\\": \\"1.5rem\\",
      \\"box-shadow\\": \\"0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)\\"
    },
    \\".card\\": {
      \\"background-color\\": \\"#fff\\",
      \\"border-radius\\": \\"0.5rem\\",
      \\"padding\\": \\"1.5rem\\",
      \\"box-shadow\\": \\"0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)\\"
    }
  });
  addUtilities({
    \\".content-auto-imported\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    },
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > interceptors css 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({
    \\"h1\\": {
      \\"font-size\\": theme(\\"fontSize.2xl\\")
    },
    \\"h2\\": {
      \\"font-size\\": theme(\\"fontSize.xl\\")
    },
    \\".test\\": {
      \\"font-size\\": \\"99.6px\\"
    }
  });
  addComponents({
    \\".card\\": {
      \\"background-color\\": theme(\\"colors.white\\"),
      \\"border-radius\\": theme(\\"borderRadius.lg\\"),
      \\"padding\\": theme(\\"spacing.6\\"),
      \\"box-shadow\\": theme(\\"boxShadow.xl\\")
    }
  });
  addUtilities({
    \\".content-auto\\": {
      \\"content-visibility\\": \\"\\\\\\"auto\\\\\\"\\"
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > repeat css case 0 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({
    \\".a\\": {
      \\"width\\": \\"100%\\",
      \\"font-size\\": \\"100px\\",
      \\"color\\": \\"#989898 !important\\",
      \\"background\\": \\"#cccccc !important\\"
    }
  });
  addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > repeat css case 1 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({
    \\".a\\": {
      \\"width\\": \\"100%\\",
      \\"transition\\": \\"transform 0.3 ease-in-out\\",
      \\"font-size\\": \\"100px\\",
      \\"color\\": \\"#989898 !important\\",
      \\"background\\": \\"#cccccc !important\\"
    },
    \\".a:focus\\": {
      \\"background\\": \\"#000\\"
    },
    \\".a:hover\\": {
      \\"transform\\": \\"scale(-10px)\\"
    },
    \\".a > .a\\": {
      \\"margin-top\\": \\"10px\\"
    }
  });
  addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 0 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({
    \\".content-area0\\": {
      \\"height\\": \`calc(100vh - \${theme(\\"spacing.12\\")})\`
    },
    \\".content-area1\\": {
      \\"height\\": \`calc(100vh - \${theme(\\"spacing[2.5]\\")})\`
    }
  });
  addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 1 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({
    \\".content-area0\\": {
      \\"height\\": \`calc(100vh - \${theme(\\"spacing.12\\")} - \${theme(\\"spacing.1\\")})\`
    },
    \\".content-area1\\": {
      \\"height\\": \`calc(100vh - \${theme(\\"spacing[2.5]\\")} + \${theme(\\"spacing.6\\")})\`
    }
  });
  addUtilities({});
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 2 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({});
  addUtilities({
    \\".a\\": {
      \\"font-size\\": theme(\\"fontSize.xl\\")
    }
  });
});
module.exports = css2TwPlugin;"
`;

exports[`generator > theme case 3 1`] = `
"const _plugin = require(\\"tailwindcss/plugin\\");
const css2TwPlugin = _plugin(function ({
  addBase: addBase,
  addComponents: addComponents,
  addUtilities: addUtilities,
  theme: theme,
  addVariant: addVariant,
  config: config,
  corePlugins: corePlugins,
  e: e,
  matchComponents: matchComponents,
  matchUtilities: matchUtilities,
  matchVariant: matchVariant
}) {
  addBase({});
  addComponents({
    \\".a\\": {
      \\"font-size\\": theme(\\"fontSize.3xl\\") + \\" !important\\"
    }
  });
  addUtilities({});
});
module.exports = css2TwPlugin;"
`;
